--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,21 @@
+aiofiles==0.4.0
+blinker==1.4
+click==7.1.1
+h11==0.9.0
+h2==3.2.0
+hpack==3.0.0
+Hypercorn==0.9.2
+hyperframe==5.2.0
+itsdangerous==1.1.0
+Jinja2==2.11.1
+MarkupSafe==1.1.1
+priority==1.3.0
 pyaes==1.6.1
 pyasn1==0.4.8
+Quart==0.11.3
 rsa==4.0
 Telethon==1.11.3
+toml==0.10.0
+typing-extensions==3.7.4.1
+Werkzeug==1.0.0
+wsproto==0.15.0
